fixed more spacing

--- a/P1/assets/css/graphstyle.css
+++ b/P1/assets/css/graphstyle.css
@@ -92,3 +92,11 @@ p {
 #ratio_container {
   padding-top: 80px;
 }
+
+#donut_wrapper h3 {
+  padding-top: 40px;
+}
+
+#donut_warpper {
+  padding-top: 0px;
+}
